--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Webstudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <div class="container">
+      <nav class="header-nav">
         <a href="./index.html" class="logo">
-          <span class="logo-part">Web</span>studio</a
-        >
+          <span class="logo-part">Web</span>studio</a>
         <ul class="site-nav">
           <li><a href="./index.html" class="link current">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
@@ -34,13 +35,17 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
     <main>
       <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
+        </div>
       </section>
       <section class="section">
+        <div class="container">
         <h2 class="section-title, visually-hidden">Our services</h2>
         <ul>
           <li>
@@ -72,8 +77,10 @@
             </p>
           </li>
         </ul>
+        </div>
       </section class="section">
       <section>
+        <div class="container">
         <h2 class="section-title">What are we doing</h2>
         <ul>
           <li>
@@ -90,8 +97,10 @@
             />
           </li>
         </ul>
+        </div>
       </section>
       <section class="section-team">
+        <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="section-descr">
           <li class="section-team-card">
@@ -127,15 +136,18 @@
             <p  class="section-text">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" class="logo-footer">
           <span class="logo-part">Web</span>studio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
