--- a/portfolio.html
+++ b/portfolio.html
@@ -5,114 +5,162 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-        <nav>
-        <a href="./index.html" class="logo">
-          <span class="logo-part">Web</span>studio</a
-        >
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link current">Portfolio</a></li>
-          <li><a href="#" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="link-addres"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link-addres"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container">
+        <nav class="headre-nav">
+          <a href="./index.html" class="logo">
+            <span class="logo-part">Web</span>studio</a
+          >
+          <ul class="site-nav">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
+            </li>
+            <li><a href="#" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link-addres"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link-addres"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section>
-        <h1 class="visually-hidden">What we do</h1>
-        <ul class="button-porfolio">
-          <li><button type="button" class="button-portfolio-link">All</button></li>
-          <li><button type="button"class="button-portfolio-link">Web Site</button></li>
-          <li><button type="button"class="button-portfolio-link">App</button></li>
-          <li><button type="button"class="button-portfolio-link">Design</button></li>
-          <li><button type="button"class="button-portfolio-link">Marketing</button></li>
-        </ul>
+      <section class="portfolio-section">
+        <div class="container">
+          <h1 class="visually-hidden">What we do</h1>
+          <ul class="button-porfolio">
+            <li>
+              <button type="button" class="button-portfolio-link">All</button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio-link">
+                Web Site
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio-link">App</button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio-link">
+                Design
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button-portfolio-link">
+                Marketing
+              </button>
+            </li>
+          </ul>
 
-        <ul>
-          <li>
-            <img
-              src="./images/img(5).jpg"
-              alt="Banking app project"
-              width="360"
-            />
-            <h2 class="section-subtitle">Banking App Interface Concept</h2>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img(6).jpg"
-              alt="Paying using phone"
-              width="360"
-            />
-            <h2 class="section-subtitle">Cashless Payment</h2>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img(7).jpg" alt="laptop and phone" width="360" />
-            <h2 class="section-subtitle">Meditaion App</h2>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img src="./images/img(8).jpg" alt="Car" width="360" />
-            <h2 class="section-subtitle">Taxi Service</h2>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img(15).jpg" alt="Phone" width="360" />
-            <h2 class="section-subtitle">Screen Illustrations</h2>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img(9).jpg"
-              alt="Girl with headphones"
-              width="360"
-            />
-            <h2 class="section-subtitle">Online Courses</h2>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/img(10).jpg" alt="View of stories" width="360" />
-            <h2 class="section-subtitle">Instagram Stories Concept</h2>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img src="./images/img(11).jpg" alt="Bag with fruits" width="360" />
-            <h2 class="section-subtitle">Organic Food</h2>
-            <p class="section-text">Web Site</p>
-          </li>
-          <li>
-            <img src="./images/img(14).jpg" alt="Cup of cofee" width="360" />
-            <h2 class="section-subtitle">Fresh Coffee</h2>
-            <p class="section-text">Web Site</p>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <img
+                src="./images/img(5).jpg"
+                alt="Banking app project"
+                width="360"
+              />
+              <h2 class="section-subtitle">Banking App Interface Concept</h2>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/img(6).jpg"
+                alt="Paying using phone"
+                width="360"
+              />
+              <h2 class="section-subtitle">Cashless Payment</h2>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img(7).jpg"
+                alt="laptop and phone"
+                width="360"
+              />
+              <h2 class="section-subtitle">Meditaion App</h2>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img src="./images/img(8).jpg" alt="Car" width="360" />
+              <h2 class="section-subtitle">Taxi Service</h2>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/img(15).jpg" alt="Phone" width="360" />
+              <h2 class="section-subtitle">Screen Illustrations</h2>
+              <p class="section-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/img(9).jpg"
+                alt="Girl with headphones"
+                width="360"
+              />
+              <h2 class="section-subtitle">Online Courses</h2>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/img(10).jpg"
+                alt="View of stories"
+                width="360"
+              />
+              <h2 class="section-subtitle">Instagram Stories Concept</h2>
+              <p class="section-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/img(11).jpg"
+                alt="Bag with fruits"
+                width="360"
+              />
+              <h2 class="section-subtitle">Organic Food</h2>
+              <p class="section-text">Web Site</p>
+            </li>
+            <li>
+              <img src="./images/img(14).jpg" alt="Cup of cofee" width="360" />
+              <h2 class="section-subtitle">Fresh Coffee</h2>
+              <p class="section-text">Web Site</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-  <footer class="footer">
-      <a href="./index.html" class="logo-footer">
-          <span class="logo-part">Web</span>studio</a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="logo-footer">
+          <span class="logo-part">Web</span>studio</a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
