--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
             </li>
           </ul>
 
-          <ul>
+          <ul class="portfolio-list">
             <li>
               <img
                 src="./images/img(5).jpg"
