--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
       </div>
     </header>
     <main>
+      <section class="section-hero">
         <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button">Order Service</button>
         </div>
       </section>
-      <section class="section">
+      <section class="section-services">
         <div class="container">
         <h2 class="section-title, visually-hidden">Our services</h2>
         <ul>
@@ -78,7 +79,7 @@
         </ul>
         </div>
       </section class="section">
-      <section>
+      <section class="section-exapmles">
         <div class="container">
         <h2 class="section-title">What are we doing</h2>
         <ul>
