add margins to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
       <section class="portfolio-section">
         <div class="container">
           <h1 class="visually-hidden">What we do</h1>
-          <ul class="button-porfolio">
+          <ul class="button-portfolio-list">
             <li>
               <button type="button" class="button-portfolio-link">All</button>
             </li>
